# SMSTaggingOfficer

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
samples/: sms_export.jsonl  sms_samples.csv  top20_import_example.csv
src/: router.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/: .keep
src-tauri/src/: app.rs  lib.rs  main.rs  selftest.rs  settings.rs  status.rs
src-tauri/src/db/: dao.rs  mod.rs
src-tauri/src/db/migrations/: 001_init.sql
src-tauri/src/exporter/: mod.rs
src-tauri/src/importer/: mod.rs
src-tauri/src/model/: batch.rs  fusion.rs  mod.rs  prompt.rs  provider.rs  schema.rs
src-tauri/src/rules/: mod.rs
src/components/: AppShell.vue  ReviewDrawer.vue  StatusBar.vue
src/pages/: BatchPage.vue  ExportPage.vue  ImportPage.vue  ListPage.vue  SettingsPage.vue
src/styles/: app.css
tools/: selftest.sh
