[package]
name = "sms_tagging_officer"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
regex = "1"
once_cell = "1"
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"

# SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

# CSV / Excel import
csv = "1"
calamine = "0.24"

# Tauri

[dependencies.tauri]
version = "1.5"
features = ["dialog-open", "dialog-save", "fs-read-file", "fs-write-file", "path-all", "shell-open"]

[features]
custom-protocol = ["tauri/custom-protocol"]
